--- a/robotsito_ws/src/servos_node/setup.cfg
+++ b/robotsito_ws/src/servos_node/setup.cfg
@@ -2,3 +2,5 @@
 script_dir=$base/lib/servos_node
 [install]
 install_scripts=$base/lib/servos_node
+[build_scripts]
+executable = /usr/bin/env python3
