--- a/robotsito_ws/gz_ws/src/plugins/CMakeLists.txt
+++ b/robotsito_ws/gz_ws/src/plugins/CMakeLists.txt
@@ -8,7 +8,8 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(custom_action_interfaces REQUIRED)
 find_package(gz-sim8 REQUIRED)
 find_package(gz-cmake3 REQUIRED)
 find_package(ros_gz_interfaces REQUIRED)
@@ -16,7 +17,7 @@ find_package(ros_gz_interfaces REQUIRED)
 # Include directories
 include_directories(
   ${rclcpp_INCLUDE_DIRS}
-  ${std_msgs_INCLUDE_DIRS}
+  ${rclcpp_action_INCLUDE_DIRS}
   ${gz-sim8_INCLUDE_DIRS}
   ${ros_gz_interfaces_INCLUDE_DIRS}
 )
@@ -26,8 +27,11 @@ link_directories(${gz-sim8_LIBRARY_DIRS})
 
 # Plugin
 add_library(${PROJECT_NAME} SHARED src/JointPlugin.cpp)
-ament_target_dependencies(${PROJECT_NAME} rclcpp std_msgs gz-sim8 ros_gz_interfaces)
-target_link_libraries(${PROJECT_NAME} ${gz-sim8_LIBRARIES})
+ament_target_dependencies(${PROJECT_NAME} rclcpp rclcpp_action custom_action_interfaces gz-sim8 ros_gz_interfaces)
+target_link_libraries(${PROJECT_NAME} ${gz-sim8_LIBRARIES}
+rclcpp::rclcpp
+rclcpp_action::rclcpp_action
+)
 
 # Install
 install(
