--- a/robotsito_ws/gz_ws/src/plugins/package.xml
+++ b/robotsito_ws/gz_ws/src/plugins/package.xml
@@ -10,11 +10,13 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <build_depend>rclcpp_action</build_depend>
+  <build_depend>custom_action_interfaces</build_depend>
   <build_depend>gz-sim8</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>rclcpp_action</exec_depend>
+  <exec_depend>custom_action_interfaces</exec_depend>
   <exec_depend>ros_gz</exec_depend>
 
   <export>
