Custom action file update to UInt8MultiArray

--- a/robotsito_ws/ros_ws/src/custom_action_interfaces/CMakeLists.txt
+++ b/robotsito_ws/ros_ws/src/custom_action_interfaces/CMakeLists.txt
@@ -8,9 +8,11 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/ServoLegs.action"
+  DEPENDENCIES std_msgs
 )
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
