--- a/robotsito_ws/ros_ws/src/custom_action_interfaces/package.xml
+++ b/robotsito_ws/ros_ws/src/custom_action_interfaces/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="javi.rm2005@gmail.com">javideus</maintainer>
   <license>Apache-2.0</license>
 
+  <depend>std_msgs</depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
   #Adding buildtool for the action file
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
